# rshift

./: .Rbuildignore  .gitattributes  .gitignore  CITATION  DESCRIPTION  LICENSE  LICENSE.note  NAMESPACE  README.md  configure  rshift.R
.github/: dependabot.yml
.github/workflows/: R-CMD-check.yaml
R/: Hellinger_trans.R  January_PDO.R  Lanzante.R  RSI.R  RSI_graph.R  Rodionov.R  absolute_to_percentage.R  extendr-wrappers.R  lake_RSI.R  lake_data.R  regime_means.R  rolling_autoc.R
data/: January_PDO.rda  lake_RSI.rda  lake_data.rda
inst/: AUTHORS  CITATION
man/: Hellinger_trans.Rd  January_PDO.Rd  Lanzante.Rd  RSI_graph.Rd  Rodionov.Rd  absolute_to_percentage.Rd  lake_RSI.Rd  lake_data.Rd  regime_means.Rd  rolling_autoc.Rd  rshift-package.Rd  rust_regime_means.Rd  rust_rodionov.Rd  rust_rodionov_huber.Rd
src/: .gitignore  Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c  rshift-win.def
src/rust/: Cargo.toml  cargo_vendor_config.toml  vendor.sh  vendor.tar.xz
src/rust/src/: lib.rs
vignettes/: STARSmanual.ltx  bibliography.bib
