[package]
name = 'rshift'
version = '2.2.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]

[dependencies]
extendr-api = { git = "https://github.com/extendr/extendr", rev = "b32fd0365bfc1c682a09dd7b4bceca0a91ac085d" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
