[package]
name = 'rshift'
version = '2.2.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]

[dependencies]
extendr-api = { git = "https://github.com/extendr/extendr", rev = "a1f6bc0d06e881ffdc90248cdc5d3e9cfac170d9" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
