[package]
name = 'rshift'
version = '3.1.2'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]

[dependencies]
extendr-api = "0.8.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization

# to get patch and fix _abort issue
[patch.crates-io]
extendr-api = { git = "https://github.com/extendr/extendr" }

